--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ boto3 = "*"
 moto = "*"
 cmake = "*"
 dlib = "==19.22.0"
+travis-encrypt = "*"
+environs = "*"
 
 [dev-packages]
 dlib = "==19.22.0"
