--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -8,12 +8,8 @@ coverage==5.2.1
 Sphinx==1.8.5
 twine==1.14.0
 
-pytest==4.6.5
-pytest-runner==5.1
-pytest-cov==2.11.1
-botocore==1.20.65
-s3fs==2021.4.0
-boto3==1.17.64
-moto==2.0.6
-cmake==3.18.4
-dlib==19.22.0
+pytest==*
+pytest-runner==*
+pytest-cov==*
+cmake==*
+dlib==*
